--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.14.2", features = [ "dynamic_linking" ] }
+itertools = "0.13.0"
 iyes_perf_ui = "0.3.0"
 noise = "0.9.0"
 
