--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bevy = { version = "0.14.2", features = [ "dynamic_linking" ] }
 itertools = "0.13.0"
 iyes_perf_ui = "0.3.0"
 noise = "0.9.0"
+rayon = "1.10.0"
 
 # [target.x86_64-pc-windows-msvc]
 # linker = "rust-lld.exe"
