--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ itertools = "0.13.0"
 iyes_perf_ui = "0.3.0"
 noise = "0.9.0"
 rayon = "1.10.0"
+strum = "0.26"
+strum_macros = "0.26"
 
 # [target.x86_64-pc-windows-msvc]
 # linker = "rust-lld.exe"
