--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rayon = "1.10.0"
 strum = "0.26"
 strum_macros = "0.26"
 log = { version = "*", features = [ "max_level_debug", "release_max_level_warn" ] }
+rand = "0.9.0"
 
 # [target.x86_64-pc-windows-msvc]
 # linker = "rust-lld.exe"
