--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.16", features = [ "dynamic_linking" ] }
+bevy = { version = "0.16.1", features = [ "dynamic_linking" ] }
 itertools = "0.14.0"
-iyes_perf_ui = { git = "https://github.com/olekspickle/iyes_perf_ui.git", branch = "main" }
+iyes_perf_ui = "0.5"
 noise = "0.9.0"
 rayon = "1.10.0"
 strum = "0.27.1"
